# wiskill

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  wiskill.toml
.github/workflows/: publish-image.yml
deploy/: .env.example  README.md  docker-compose.yml  wiskill.toml
skill/: SKILL.md
tests/: conftest.py  test_api.py  test_apikey_store.py  test_atomic.py  test_auth_hashing.py  test_backend_hybrid.py  test_backend_lexical.py  test_cli.py  test_config.py  test_markup.py  test_mcp.py  test_reconcile.py  test_service.py  test_setup.py  test_store.py  test_user_store.py  test_web.py
wiskill/: __init__.py  _atomic.py  _setup.py  auth.py  backend.py  cli.py  config.py  markup.py  service.py  store.py
wiskill/mcp/: server.py
wiskill/web/: api.py  app.py
wiskill/web/static/: style.css
wiskill/web/templates/: base.html  edit.html  history.html  history_view.html  index.html  login.html  new.html  page.html  search.html  tag.html  tags.html
